# anro18l-winnicki-sikora

./: README.md  anniversary.txt
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: listener.py
beginner_tutorials/urdf/: 01-myfirst.urdf  my_robot.urdf
catkin_ws/: params.yaml
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/install/: _setup_util.py  setup.sh
lab1/: package.xml
lab1/img/: boringThings.txt
lab1/launch/: lab1.launch  lab1_default.launch  lab1_set.launch
lab1/scripts/: operator.py  set_params.py
lab2/: CMakeLists.txt  package.xml
lab2/launch/: display.launch  joint.launch
lab2/scripts/: dh_to_rpy.py
lab2/urdf/: model.xacro  modelMovable.xacro
lab3/: CMakeLists.txt  config.rviz  package.xml
lab3/launch/: display.launch
lab3/scripts/: dh_to_rpy.py  kdl_dkin.py  marker.py  nonkdl_dkin.py  silent_publisher.py
lab3/urdf/: modelMovable.xacro
lab4/: CMakeLists.txt  config.rviz  package.xml
lab4/gui/: gui.glade  gui.py
lab4/launch/: display.launch  jint.launch  kdl_kin.launch  nonkdl_kin.launch  oint.launch
lab4/scripts/: interpolators.py  jint.py  jint_gui.py  nonkdl_dkin.py  oint.py  oint_gui.py  robot.py  silent_publisher.py  temp_req.py
lab4/srv/: InterpolationRequest.srv
lab4/urdf/: modelMovable.xacro
lab5/: CMakeLists.txt  config.rviz  package.xml
lab5/launch/: display.launch  ikin.launch
lab5/scripts/: ikin.py  interpolators.py  ocmd_el.py  ocmd_sq.py  oint.py  oint_call.py  scipytest.py  silent_publisher.py
lab5/srv/: OINTRequest.srv
r2d2/: CMakeLists.txt  package.xml
(+19 files in other folders)
