<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>1.0.1</version>
  <description>Laboratorium ANRO - spotkanie 1</description>

  <maintainer email="J.Sikora@stud.elka.pw.edu.pl">Jakub Sikora</maintainer>
  <maintainer email="K.Winnicki@stud.elka.pw.edu.pl">Konrad Winnicki</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/PW-EITI-ANRO-18L/anro18l-winnicki-sikora.git</url>
  <author email="K.Winnicki@stud.elka.pw.edu.pl">Konrad Winnicki</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
